<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_border"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dialog_title_add_bowl"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edittext_dialog_add_pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/round_border"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/dialog_hint_pet_name" />

            <EditText
                android:id="@+id/edittext_dialog_add_daily_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/round_border"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/dialog_hint_daily_goal"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/button_dialog_add_bowl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/dialog_action_add_bowl"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>