<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_border"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dialog_title_update_daily_goal"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dialog_msg_current_daily_goal"
                    android:textSize="20sp"/>

                <!--TODO: fetch from DB-->
                <TextView
                    android:id="@+id/text_dialog_current_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="30dp"
                    android:textSize="20sp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edittext_dialog_update_daily_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/round_border"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/dialog_hint_daily_goal"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/button_dialog_update_daily_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/dialog_action_update_daily_goal"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>