<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/startColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_user_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image_description_user"
            android:src="@drawable/ic_person"
            android:layout_gravity="center"
            android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/text_app_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="5dp"
                android:paddingBottom="16dp"
                android:text="@string/app_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_app_logo_toolbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_logo_description"
                android:padding="1dp"
                android:rotation="35"
                android:src="@drawable/pet_logo" />

        </LinearLayout>

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

</RelativeLayout>