<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedingFragment">

    <!--TODO: conditional statement if no bowl is selected-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!--TODO: fetch from DB-->
        <TextView
            android:id="@+id/text_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="-Pet Name-"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="32sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1">

            <!--TODO: fetch from DB-->
            <TextView
                android:id="@+id/text_current_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="100"
                android:textSize="52sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingStart="29dp"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlSymmetry">

                <!--TODO: fetch from DB-->
                <TextView
                    android:id="@+id/text_update_goal_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="250"
                    android:textSize="36sp"
                    android:drawablePadding="5dp"
                    app:drawableEndCompat="@drawable/ic_edit" />

            </LinearLayout>

            <!--TODO: conditional statement-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_feeding_warning"
                android:textColor="@color/design_default_color_error" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/silver" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_last_feeding"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="24sp" />

            <!--TODO: fetch from DB-->
            <TextView
                android:id="@+id/text_last_feeding_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12:46"
                android:layout_gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_feed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/button_background"
            android:paddingVertical="10dp"
            android:text="@string/btn_feed"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_reset_bowl_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/btn_reset_bowl"
            />

    </LinearLayout>

</FrameLayout>