<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/label_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/silver"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/label_back"
            app:drawableStartCompat="@drawable/ic_arrow_back"
            android:drawablePadding="5dp"
            android:layout_below="@+id/include" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/label_back"
            android:layout_above="@id/layout_buttons">

            <TextView
                android:id="@+id/text_pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="40sp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">

                <!--TODO: fetch from DB-->
                <TextView
                    android:id="@+id/text_current_dosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="52sp"
                    android:autoSizeTextType="uniform"/>

                <!--TODO: fetch from DB-->
                <TextView
                    android:id="@+id/text_update_goal_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="29dp"
                    android:drawablePadding="5dp"
                    android:textSize="36sp"
                    app:drawableEndCompat="@drawable/ic_edit"
                    android:layout_gravity="center"
                    tools:ignore="RtlSymmetry"
                    android:autoSizeTextType="uniform"/>

                <TextView
                    android:id="@+id/text_dosage_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_feeding_warning"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="invisible"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <View
                android:id="@+id/view_horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="30dp"
                android:background="@color/silver"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/text_last_feeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_last_feeding"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:autoSizeTextType="uniform"/>

                <TextView
                    android:id="@+id/text_last_feeding_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:autoSizeTextType="uniform"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/button_feed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/btn_feed"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button_reset_bowl_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:background="@drawable/button_background"
                android:paddingHorizontal="20dp"
                android:text="@string/btn_reset_bowl"
                android:textColor="@color/white"
                android:layout_below="@+id/button_feed"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>